--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@ This is the XML activity_main for the Face Maker app.
         android:orientation="vertical">
 
         <RadioGroup
+            android:id="@+id/radioGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -126,7 +127,7 @@ This is the XML activity_main for the Face Maker app.
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/randFace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
